[package]
name = "select_nodes"
version = "0.1.0"
edition = "2021"
description = "dbt Select Nodes library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnmatch-regex = "0.2.0"
indexmap = "1.9.2"
lazy_static = "1.4.0"
regex = "1"
wai-bindgen-rust = "0.2.3"
