[package]
name = "dbt_node_selector"
version = "0.1.10"
edition = "2021"
description = "dbt Node Selector library (In Development)"
keywords = ["dbt", "analytics", "dag", "graph"]
authors = ["Andrew Sweet <andrew.sweet@dbtlabs.com>"]
include = ["LICENSE", "Cargo.toml", "src/**/*.rs", "target/wasm32-unknown-unknown/release/dbt_node_selector.wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "dbt-labs"  # The namespace to publish it to
abi = "none" # How to compile the crate. "none" is "wasm32-unknown-unknown"
bindings = { wai-version = "0.2.0", exports = "dbt-node-selector.wai" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnmatch-regex = "0.2.0"
indexmap = "1.9.2"
lazy_static = "1.4.0"
regex = "1"
wai-bindgen-rust = "0.2.3"
